bug 595171 - crashreporter glue for Android. r=blassey a=blocking-fennec